refactoring($compile): 주문 유효성 검증 도메인 서비스(OrderValidator) 생성 및 적용
- 주문 도메인에 유효성 검증 도메인 서비스를 파라미터로 받는 place 메서드 추가
- 주문 생성 테스트 변경
- 매장 주문 메뉴 없는 경우 테스트 변경